--- a/pom.xml
+++ b/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.phegon</groupId>
-	<artifactId>ServerHotelBookingAndManagement</artifactId>
+	<artifactId>RoyalHotel</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ServerHotelBookingAndManagement</name>
-	<description>Demo project for Spring Boot</description>
+	<name>RoyalHotel</name>
+	<description>Project for Spring Boot</description>
 	<properties>
 		<java.version>21</java.version>
 	</properties>
@@ -70,11 +70,11 @@
 			<version>0.12.5</version>
 		</dependency>
 		<!-- https://mvnrepository.com/artifact/com.amazonaws/aws-java-sdk-s3 -->
-<!--		<dependency>-->
-<!--			<groupId>com.amazonaws</groupId>-->
-<!--			<artifactId>aws-java-sdk-s3</artifactId>-->
-<!--			<version>1.12.730</version>-->
-<!--		</dependency>-->
+		<dependency>
+			<groupId>com.amazonaws</groupId>
+			<artifactId>aws-java-sdk-s3</artifactId>
+			<version>1.12.730</version>
+		</dependency>
 	</dependencies>
 
 	<build>
