--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,15 @@
 			<artifactId>aws-java-sdk-s3</artifactId>
 			<version>1.12.730</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-thymeleaf</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
